[gd_scene load_steps=24 format=2]

[ext_resource path="res://recursos/imagens/cenário/Fase3/Object/Tree_3.png" type="Texture" id=106]
[ext_resource path="res://recursos/imagens/cenário/Fase3/BG/BG.png" type="Texture" id=107]
[ext_resource path="res://script_tutorial.gd" type="Script" id=108]
[ext_resource path="res://recursos/imagens/cenário/chao.tres" type="TileSet" id=109]
[ext_resource path="res://recursos/imagens/recursos/s.png" type="Texture" id=110]
[ext_resource path="res://recursos/imagens/recursos/Esc.png" type="Texture" id=111]
[ext_resource path="res://recursos/imagens/recursos/setas.png" type="Texture" id=112]
[ext_resource path="res://recursos/imagens/cenário/Fase3/Object/Mushroom_1.png" type="Texture" id=113]
[ext_resource path="res://recursos/imagens/recursos/espeço.png" type="Texture" id=114]
[ext_resource path="res://recursos/fontes/NinjaStrike.otf" type="DynamicFontData" id=230]
[ext_resource path="res://recursos/fontes/game_over.ttf" type="DynamicFontData" id=231]
[ext_resource path="res://recursos/imagens/recursos/enter.png" type="Texture" id=232]
[ext_resource path="res://cena_pausa.tscn" type="PackedScene" id=233]
[ext_resource path="res://recursos/sons/ninja-star-inn.wav" type="AudioStream" id=234]

[sub_resource type="DynamicFont" id=20]
size = 80
use_mipmaps = true
use_filter = true
font_data = ExtResource( 231 )

[sub_resource type="DynamicFont" id=21]
size = 45
use_mipmaps = true
use_filter = true
font_data = ExtResource( 231 )

[sub_resource type="Animation" id=22]
resource_name = "pressione"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Label1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=23]
size = 80
outline_color = Color( 1, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 230 )

[sub_resource type="DynamicFont" id=16]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 231 )

[sub_resource type="Theme" id=17]
default_font = SubResource( 16 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.0745098, 0.94902, 0.866667, 1 )
corner_detail = 10

[sub_resource type="DynamicFont" id=19]
size = 30
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 230 )

[sub_resource type="CapsuleShape2D" id=24]
radius = 38.9565

[node name="Node2D" type="Node2D"]
script = ExtResource( 108 )

[node name="HUD" type="ParallaxBackground" parent="."]
layer = 0
follow_viewport_scale = 0.0

[node name="TUTORIAL" type="Label" parent="HUD"]
margin_left = 385.645
margin_top = 74.1624
margin_right = 635.645
margin_bottom = 120.162
custom_fonts/font = SubResource( 20 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TUTORIAL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="HUD"]
visible = false
margin_left = 322.464
margin_top = 150.202
margin_right = 706.464
margin_bottom = 177.202
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "UTILIZE AS SETAS PARA MOVER PERSONAGEM"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HUD/Label1"]
position = Vector2( 512.788, 97.5587 )
scale = Vector2( 0.262566, 0.262566 )
texture = ExtResource( 112 )

[node name="Label2" type="Label" parent="HUD"]
margin_left = 322.464
margin_top = 150.202
margin_right = 706.464
margin_bottom = 177.202
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "UTILIZE A  SETA PARA BAIXO E CARREGUE SEU CHACRA ATÉ 100%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HUD/Label2"]
position = Vector2( 512.788, 97.5587 )
scale = Vector2( 0.262566, 0.262566 )
texture = ExtResource( 112 )

[node name="Label3" type="Label" parent="HUD"]
visible = false
margin_left = 322.464
margin_top = 150.202
margin_right = 706.464
margin_bottom = 177.202
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "UTILIZE 

 PARA ATIRAR KUNAI"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HUD/Label3"]
position = Vector2( 359.961, 97.0836 )
scale = Vector2( 0.534879, 0.534879 )
texture = ExtResource( 114 )

[node name="Label4" type="Label" parent="HUD"]
visible = false
margin_left = 322.464
margin_top = 150.202
margin_right = 706.464
margin_bottom = 177.202
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "UTILIZE TECLA ENTER PARA JUTSU BASICO"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HUD/Label4"]
position = Vector2( 389.009, 64.256 )
scale = Vector2( 0.227631, 0.227631 )
texture = ExtResource( 232 )

[node name="Label5" type="Label" parent="HUD"]
visible = false
margin_left = 322.464
margin_top = 150.202
margin_right = 706.464
margin_bottom = 177.202
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "UTILIZE TECLA                    PARA ATACAR"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HUD/Label5"]
position = Vector2( 192.659, 8.03467 )
scale = Vector2( 0.0706018, 0.0706018 )
texture = ExtResource( 110 )

[node name="Label6" type="Label" parent="HUD"]
visible = false
margin_left = 322.464
margin_top = 150.202
margin_right = 706.464
margin_bottom = 177.202
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ELIMINE O INIMIGO
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Esc" type="Label" parent="HUD"]
margin_left = 6.34777
margin_top = 546.138
margin_right = 396.348
margin_bottom = 573.138
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "UTILIZE TECLA                    PARA PULAR TUTORIAL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HUD/Esc"]
position = Vector2( 162.833, 9.83691 )
scale = Vector2( 0.0927821, 0.0927823 )
texture = ExtResource( 111 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD"]
anims/pressione = SubResource( 22 )

[node name="NinjaGO" type="Label" parent="HUD"]
margin_left = 15.5563
margin_top = 11.3137
margin_right = 400.556
margin_bottom = 90.3137
custom_fonts/font = SubResource( 23 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NINJA GO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pausa" parent="HUD" instance=ExtResource( 233 )]
visible = false

[node name="Chacra" type="ProgressBar" parent="HUD"]
margin_left = 18.1042
margin_top = 119.431
margin_right = 220.104
margin_bottom = 140.431
theme = SubResource( 17 )
custom_styles/fg = SubResource( 18 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.92549, 0.0470588, 0.0470588, 1 )
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chacra" type="Label" parent="HUD"]
margin_left = 23.2106
margin_top = 92.7506
margin_right = 130.211
margin_bottom = 116.751
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Chacra:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cenario" type="ParallaxBackground" parent="."]
process_priority = 1
scroll_offset = Vector2( 2, 2 )

[node name="jap" type="Sprite" parent="Cenario"]
position = Vector2( 515.542, 222.67 )
scale = Vector2( 1.08654, 1.05564 )
texture = ExtResource( 107 )

[node name="Sprite" type="Sprite" parent="Cenario"]
position = Vector2( 2201.32, -417.762 )
scale = Vector2( 2.61655, 2.61655 )
texture = ExtResource( 106 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 109 )
format = 1
tile_data = PoolIntArray( -65509, 4, 0, -65508, 4, 0, -65507, 4, 0, -65506, 4, 0, -65505, 4, 0, -65504, 4, 0, -65503, 4, 0, -65502, 4, 0, -65501, 4, 0, -65500, 4, 0, -65499, 4, 0, -65498, 4, 0, 65559, 4, 0, 262148, 5, 0, 262150, 4, 0, 262152, 4, 0, 262154, 4, 0, 262155, 3, 0, 262156, 4, 0, 262157, 3, 0, 262158, 4, 0, 262160, 4, 0, 262162, 4, 0, 262164, 4, 0, 262184, 4, 0, 262185, 4, 0, 262186, 4, 0, 262187, 4, 0, 262188, 4, 0, 262189, 4, 0, 262190, 4, 0, 262191, 4, 0, 262192, 4, 0, 262193, 4, 0, 262194, 4, 0 )

[node name="CheckPoint1" type="Area2D" parent="."]
position = Vector2( 440.119, 238.027 )
__meta__ = {
"_edit_group_": true
}

[node name="SignArrow" type="Sprite" parent="CheckPoint1"]
position = Vector2( -0.189209, 0.0240097 )
rotation = -3.10145
scale = Vector2( 0.97603, -0.946861 )
texture = ExtResource( 113 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoint1"]
position = Vector2( 1.04114, -0.342567 )
scale = Vector2( 0.493124, 0.493124 )
shape = SubResource( 24 )

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 234 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
